<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ph.txtdis.android.BookingActivity" >

    <TextView
        android:id="@+id/booking_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/booking"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000080" />

    <TextView
        android:id="@+id/booking_id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/booking_title"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/booking_id"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/booking_id_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/booking_id_label"
        android:layout_toEndOf="@+id/booking_id_label"
        android:layout_toRightOf="@+id/booking_id_label"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="4"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="number"
        android:textAppearance="?android:attr/textAppearance" />

    <TextView
        android:id="@+id/delivery_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/booking_id_display"
        android:layout_marginLeft="@dimen/text_input_horizontal_margin"
        android:layout_marginStart="@dimen/text_input_horizontal_margin"
        android:layout_toEndOf="@+id/booking_id_display"
        android:layout_toRightOf="@+id/booking_id_display"
        android:text="@string/delivery_date"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/delivery_date_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/delivery_date_label"
        android:layout_toEndOf="@+id/delivery_date_label"
        android:layout_toRightOf="@+id/delivery_date_label"
        android:cursorVisible="false"
        android:ems="6"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="date"
        android:onClick="showDatePickerDialog"
        android:textAppearance="?android:attr/textAppearance" />

    <TextView
        android:id="@+id/customer_id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/delivery_date_input"
        android:layout_marginLeft="@dimen/text_input_horizontal_margin"
        android:layout_marginStart="@dimen/text_input_horizontal_margin"
        android:layout_toEndOf="@+id/delivery_date_input"
        android:layout_toRightOf="@+id/delivery_date_input"
        android:text="@string/customer_id"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/customer_id_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/customer_id_label"
        android:layout_toEndOf="@+id/customer_id_label"
        android:layout_toRightOf="@+id/customer_id_label"
        android:ems="4"
        android:inputType="number"
        android:textAppearance="?android:attr/textAppearance" />

    <TextView
        android:id="@+id/customer_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/customer_id_input"
        android:layout_marginLeft="@dimen/text_input_horizontal_margin"
        android:layout_marginStart="@dimen/text_input_horizontal_margin"
        android:layout_toEndOf="@+id/customer_id_input"
        android:layout_toRightOf="@+id/customer_id_input"
        android:text="@string/name"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/customer_name_display"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/customer_name_label"
        android:layout_toEndOf="@+id/customer_name_label"
        android:layout_toRightOf="@+id/customer_name_label"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="textCapCharacters"
        android:textAppearance="?android:attr/textAppearance" />

    <TextView
        android:id="@+id/customer_address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/booking_id_label"
        android:layout_marginTop="@dimen/text_input_vertical_margin"
        android:text="@string/address"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/customer_address_display"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/customer_address_label"
        android:layout_toEndOf="@+id/customer_address_label"
        android:layout_toRightOf="@+id/customer_address_label"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="textCapCharacters"
        android:textAppearance="?android:attr/textAppearance" />

    <TextView
        android:id="@+id/remarks_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customer_address_label"
        android:layout_marginTop="@dimen/text_input_vertical_margin"
        android:text="@string/remarks"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/remarks_display"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/remarks_label"
        android:layout_toEndOf="@+id/remarks_label"
        android:layout_toRightOf="@+id/remarks_label"
        android:inputType="textCapCharacters"
        android:textAppearance="?android:attr/textAppearance" />

    <LinearLayout
        android:id="@+id/total_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/remarks_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/discount_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discount"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/discount_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/vatable_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_input_horizontal_margin"
            android:layout_marginStart="@dimen/text_input_horizontal_margin"
            android:text="@string/vatable"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/vatable_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="8"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="end"
            android:inputType="number"
            android:textAppearance="?android:attr/textAppearance" >
        </EditText>

        <TextView
            android:id="@+id/vat_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_input_horizontal_margin"
            android:layout_marginStart="@dimen/text_input_horizontal_margin"
            android:text="@string/vat"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/vat_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="6"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="end"
            android:inputType="number"
            android:textAppearance="?android:attr/textAppearance" >
        </EditText>

        <TextView
            android:id="@+id/total_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_input_horizontal_margin"
            android:layout_marginStart="@dimen/text_input_horizontal_margin"
            android:text="@string/total"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/total_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="8"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="end"
            android:inputType="number"
            android:textAppearance="?android:attr/textAppearance" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/booking_list_header_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/total_layout"
        android:layout_marginTop="22dp"
        android:onClick="showBookingDetailInputDialog"
        android:orientation="horizontal"
        android:weightSum="1.0" >

        <TextView
            android:id="@+id/booking_list_header_item_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:background="#000080"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/item_id"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/booking_list_header_item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="#000080"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/booking_list_header_qc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:background="#000080"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/quality"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/booking_list_header_uom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:background="#000080"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/unit"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/booking_list_header_qty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:background="#000080"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/quantity"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/booking_list_header_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:background="#000080"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/price"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/booking_list_header_subtotal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:background="#000080"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/subtotal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <ListView
        android:id="@+id/booking_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/booking_list_header_layout" />

</RelativeLayout>