<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ph.txtdis.android.BookingInputDialog" >

    <TextView
        android:id="@+id/item_id_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/item_id"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/item_id_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/item_id_view"
        android:layout_marginLeft="@dimen/text_input_horizontal_margin"
        android:layout_marginStart="@dimen/text_input_horizontal_margin"
        android:layout_toEndOf="@+id/item_id_view"
        android:layout_toRightOf="@+id/item_id_view"
        android:ems="4"
        android:inputType="number"
        android:textAppearance="?android:attr/textAppearance" />

    <Button
        android:id="@+id/item_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/item_id_view"
        android:layout_marginLeft="@dimen/text_input_horizontal_margin"
        android:layout_marginStart="@dimen/text_input_horizontal_margin"
        android:layout_toEndOf="@+id/item_id_input"
        android:layout_toRightOf="@+id/item_id_input"
        android:onClick="searchItem"
        android:text="@string/search"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceButton" />

    <TextView
        android:id="@+id/item_name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_id_view"
        android:layout_marginTop="@dimen/text_input_vertical_margin"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/item_name_dialog_display"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/item_name_view"
        android:layout_alignLeft="@+id/item_id_input"
        android:layout_alignStart="@+id/item_id_input"
        android:layout_toEndOf="@+id/item_name_view"
        android:layout_toRightOf="@+id/item_name_view"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="textCapCharacters"
        android:textAppearance="?android:attr/textAppearance" />

    <TextView
        android:id="@+id/qc_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_name_view"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/quality"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/qc_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/qc_view"
        android:layout_alignLeft="@+id/item_id_input"
        android:layout_alignStart="@+id/item_id_input"
        android:layout_toEndOf="@+id/qc_view"
        android:layout_toRightOf="@+id/qc_view" />

    <TextView
        android:id="@+id/uom_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/qc_view"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/unit"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/uom_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/uom_view"
        android:layout_alignLeft="@+id/item_id_input"
        android:layout_alignStart="@+id/item_id_input"
        android:layout_toEndOf="@+id/uom_view"
        android:layout_toRightOf="@+id/uom_view" />

    <TextView
        android:id="@+id/qty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/uom_view"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/quantity"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/qty_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/qty_view"
        android:layout_alignLeft="@+id/item_id_input"
        android:layout_alignStart="@+id/item_id_input"
        android:layout_toEndOf="@+id/qty_view"
        android:layout_toRightOf="@+id/qty_view"
        android:ems="6"
        android:inputType="numberDecimal"
        android:textAppearance="?android:attr/textAppearance" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/qty_view"
        android:layout_marginTop="22dp"
        android:orientation="horizontal"
        android:weightSum="1.0" >

        <Button
            android:id="@+id/cancel_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="closeInput"
            android:text="@android:string/cancel"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/add_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="addItem"
            android:text="@string/add"
            android:textAllCaps="true" />
    </LinearLayout>

</RelativeLayout>